project2/tests/reject/0-Increment-bad.cc
int main(){
    bool a=false;
    a++;
    --a;
    a--;
    ++a;
}